--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-jupyter>=1.0.0
-matplotlib>=3.8.0
+jupyter>=1.0.0  
+matplotlib>=3.8.0 
 numpy>=1.26.0
-pandas>=2.1.1
+pandas>=1.6.0  
 scipy>=1.13
 seaborn>=0.12.2
+beautifulsoup4>=4.11.1 
+vaderSentiment>=4.0.0 
+plotly>=5.13.1   
+openai >=1.54.4
 re
-from bs4 import BeautifulSoup 
-from datetime import datetime
-from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer
-import plotly.express as px
+datetime 
+time
